package GUI_Package;

public class Gelaxka {
	private int posX;
	private int posY;
	private String egoeraGelaxka;

}
