package controllerPackage;

public abstract class Mugimendu {
	private int x,y;
	private boolean erakutzi;
	private static int pixelKop;
	
	protected Mugimendu() {
		
	}
}
